--- a/playbooks/openshift-node/myscaleup.yml
+++ b/playbooks/openshift-node/myscaleup.yml
@@ -36,6 +36,6 @@
     l_openshift_version_set_hosts: "oo_nodes_to_config:!oo_first_master"
 
 - import_playbook: private/bootstrap.yml
-- import_playbook: private/join.yml
+- import_playbook: private/myjoin.yml
 
 - import_playbook: ../openshift-glusterfs/private/add_hosts.yml
